fix overflow on narrower screens

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -8,6 +8,7 @@
 .revolvingText {
   position: relative;
   width: 75vh;
+  overflow: hidden;
 }
 
 .face {
